--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^10.16.4",
     "mongoose": "^7.6.3",
